errbit/deployment.yaml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: errbit-deployment
  labels:
    app: errbit
spec:
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: errbit
  template:
    metadata:
      name: errbit-app
      labels:
        app: errbit
    spec:
      containers:
      - name: errbit
        image: errbit/errbit:latest
        ports:
          - containerPort: 8080
