errbit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: errbit-app-service
  labels:
    app: errbit
spec:
  ports:
    - port: 8080
  selector:
    app: errbit
