errbit/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: errbit-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - errbit.axs-labs.com
    secretName: letsencrypt-prod
  rules:
  - host: errbit.axs-labs.com
    http:
      paths:
      - backend:
          serviceName: errbit-app-service
          servicePort: 8080
